--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -5,14 +5,16 @@ on:
       - main
 jobs:
   build:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Setup Golang
-        uses: actions/setup-go@v3
+        uses: actions/setup-go@v5
         with:
-          go-version: 1.22
+          go-version: 1.24
+      - name: Set GOROOT environment variable
+        run: echo "GOROOT=$(go env GOROOT)" >> $GITHUB_ENV
       - name: Build code
         run: go build
       - name: Test code
