--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -3,14 +3,18 @@ on:
   push:
     branches:
       - main
+
+permissions:
+  contents: read
+
 jobs:
   build:
     runs-on: ubuntu-24.04
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
       - name: Setup Golang
-        uses: actions/setup-go@v5
+        uses: actions/setup-go@f101320a9c15d06b07404e9080d33e067a1fb580 # v5.2.0
         with:
           go-version: 1.24
       - name: Set GOROOT environment variable
